Cambios del nuevo curso

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="Basic/00-helloworld.js"></script>
+    <script src="Basic/03-beginner-exercise.js"></script>
     <title>Curso Basico de JS</title>
   </head>
   <body>
